--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 27
 
     defaultConfig {
-        applicationId "com.example.android.egyptianratscrew"
+        applicationId "com.egyptianratscrew.android"
         minSdkVersion 17
         targetSdkVersion 27
         versionCode 1
