--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,10 @@ buildscript {
             name 'Google'
         }
         mavenCentral()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.4'
         classpath 'com.google.gms:oss-licenses:0.9.1'
     }
 }
